{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 76,
  "lineage": "e3e082bb-6ffb-7d19-1630-d7484fe93e53",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-b256e75eb33125a34",
            "arn": "arn:aws:ec2:us-east-1::elastic-ip/eipalloc-b256e75eb33125a34",
            "domain": "vpc",
            "id": "eipalloc-b256e75eb33125a34",
            "public_dns": "ec2-127-74-124-36.compute-1.amazonaws.com",
            "public_ip": "127.74.124.36",
            "tags": {
              "Environment": "staging",
              "Name": "email-platform-staging-nat-1"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "email-platform-staging-nat-1"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-2b63f4cc00e2514df",
            "arn": "arn:aws:ec2:us-east-1::elastic-ip/eipalloc-2b63f4cc00e2514df",
            "domain": "vpc",
            "id": "eipalloc-2b63f4cc00e2514df",
            "public_dns": "ec2-127-32-38-144.compute-1.amazonaws.com",
            "public_ip": "127.32.38.144",
            "tags": {
              "Environment": "staging",
              "Name": "email-platform-staging-nat-2"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "email-platform-staging-nat-2"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:internet-gateway/igw-f7209df1dfcf94785",
            "id": "igw-f7209df1dfcf94785",
            "owner_id": "000000000000",
            "tags": {
              "Environment": "staging",
              "Name": "email-platform-staging-igw"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "email-platform-staging-igw"
            },
            "vpc_id": "vpc-07dd743f606dbab02"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:loadbalancer/app/email-platform-staging-alb/e3fa55046ba8af0b",
            "arn_suffix": "app/email-platform-staging-alb/e3fa55046ba8af0b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "email-platform-staging-alb.elb.localhost.localstack.cloud",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:000000000000:loadbalancer/app/email-platform-staging-alb/e3fa55046ba8af0b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "email-platform-staging-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-b970a1b75c187b079"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-29f500f1002f8f8bd"
              },
              {
                "subnet_id": "subnet-40780964b346d2447"
              }
            ],
            "subnets": [
              "subnet-29f500f1002f8f8bd",
              "subnet-40780964b346d2447"
            ],
            "tags": {
              "Environment": "staging",
              "Name": "email-platform-staging-alb"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "email-platform-staging-alb"
            },
            "vpc_id": "vpc-07dd743f606dbab02",
            "xff_header_processing_mode": "append",
            "zone_id": "Z2P70J7EXAMPLE"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:listener/app/email-platform-staging-alb/e3fa55046ba8af0b/27ce5fd52a7b1bfa",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Service not found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:000000000000:listener/app/email-platform-staging-alb/e3fa55046ba8af0b/27ce5fd52a7b1bfa",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:loadbalancer/app/email-platform-staging-alb/e3fa55046ba8af0b",
            "mutual_authentication": [],
            "port": 4566,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {
              "Environment": "staging",
              "Name": "email-platform-staging-listener"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "email-platform-staging-listener"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-b256e75eb33125a34",
            "association_id": "eipassoc-7cb593e9f4c8739f8",
            "connectivity_type": "public",
            "id": "nat-a2466c5066184ff8d",
            "network_interface_id": "eni-21284c6d7554414c7",
            "private_ip": "10.213.2.197",
            "public_ip": "127.74.124.36",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-40780964b346d2447",
            "tags": {
              "Environment": "staging",
              "Name": "email-platform-staging-nat-1"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "email-platform-staging-nat-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-2b63f4cc00e2514df",
            "association_id": "eipassoc-2cca503b137bf7db7",
            "connectivity_type": "public",
            "id": "nat-422d19061b0924e07",
            "network_interface_id": "eni-911398a3edd0429f8",
            "private_ip": "10.26.170.206",
            "public_ip": "127.32.38.144",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-29f500f1002f8f8bd",
            "tags": {
              "Environment": "staging",
              "Name": "email-platform-staging-nat-2"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "email-platform-staging-nat-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:route-table/rtb-866b303e4d73e687d",
            "id": "rtb-866b303e4d73e687d",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-a2466c5066184ff8d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "staging",
              "Name": "email-platform-staging-private-rt-1"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "email-platform-staging-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-07dd743f606dbab02"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:route-table/rtb-f6b14d364afc28ff4",
            "id": "rtb-f6b14d364afc28ff4",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-422d19061b0924e07",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "staging",
              "Name": "email-platform-staging-private-rt-2"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "email-platform-staging-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-07dd743f606dbab02"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:route-table/rtb-7f56c5d15d90b029d",
            "id": "rtb-7f56c5d15d90b029d",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-f7209df1dfcf94785",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "staging",
              "Name": "email-platform-staging-public-rt"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "email-platform-staging-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07dd743f606dbab02"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-8e37b79461fc47cc5",
            "route_table_id": "rtb-866b303e4d73e687d",
            "subnet_id": "subnet-b34e174dd95675e06"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-289b29a543ad4da96",
            "route_table_id": "rtb-f6b14d364afc28ff4",
            "subnet_id": "subnet-c2df468ce80a8025b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-1c0ade28b99fa10d8",
            "route_table_id": "rtb-7f56c5d15d90b029d",
            "subnet_id": "subnet-40780964b346d2447"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-6ff2b754abadcc6a2",
            "route_table_id": "rtb-7f56c5d15d90b029d",
            "subnet_id": "subnet-29f500f1002f8f8bd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:security-group/sg-b970a1b75c187b079",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-b970a1b75c187b079",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "email-platform-staging-alb-sg",
            "name_prefix": "",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "Name": "email-platform-staging-alb-sg"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "email-platform-staging-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07dd743f606dbab02"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:security-group/sg-bc76c318b7bb1d702",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-bc76c318b7bb1d702",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from ALB",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-b970a1b75c187b079"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "email-platform-staging-ecs-sg",
            "name_prefix": "",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "Name": "email-platform-staging-ecs-sg"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "email-platform-staging-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07dd743f606dbab02"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-b34e174dd95675e06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-b34e174dd95675e06",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "Name": "email-platform-staging-private-1"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "email-platform-staging-private-1"
            },
            "vpc_id": "vpc-07dd743f606dbab02"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-c2df468ce80a8025b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-c2df468ce80a8025b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "Name": "email-platform-staging-private-2"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "email-platform-staging-private-2"
            },
            "vpc_id": "vpc-07dd743f606dbab02"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-40780964b346d2447",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-40780964b346d2447",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "Name": "email-platform-staging-public-1"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "email-platform-staging-public-1"
            },
            "vpc_id": "vpc-07dd743f606dbab02"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-29f500f1002f8f8bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-29f500f1002f8f8bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "Name": "email-platform-staging-public-2"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "email-platform-staging-public-2"
            },
            "vpc_id": "vpc-07dd743f606dbab02"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:vpc/vpc-07dd743f606dbab02",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-163392cd49bf0a5b9",
            "default_route_table_id": "rtb-553eafac388b4377c",
            "default_security_group_id": "sg-a694a2740328a4b74",
            "dhcp_options_id": "default",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07dd743f606dbab02",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-553eafac388b4377c",
            "owner_id": "000000000000",
            "tags": {
              "Environment": "staging",
              "Name": "email-platform-staging-vpc"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "email-platform-staging-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.sampleapi",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/email-platform-staging-sampleapi/35c39ec741db570d",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:listener-rule/app/email-platform-staging-alb/e3fa55046ba8af0b/27ce5fd52a7b1bfa/c572288ff885918d",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/*",
                      "/health"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:000000000000:listener-rule/app/email-platform-staging-alb/e3fa55046ba8af0b/27ce5fd52a7b1bfa/c572288ff885918d",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:listener/app/email-platform-staging-alb/e3fa55046ba8af0b/27ce5fd52a7b1bfa",
            "priority": 100,
            "tags": {
              "Component": "api",
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "email-platform-staging-sampleapi",
              "Service": "sampleapi"
            },
            "tags_all": {
              "Component": "api",
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "email-platform-staging-sampleapi",
              "Service": "sampleapi"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.http",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "module.sampleapi.aws_lb_target_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.sampleapi",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/email-platform-staging-sampleapi/35c39ec741db570d",
            "arn_suffix": "targetgroup/email-platform-staging-sampleapi/35c39ec741db570d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/email-platform-staging-sampleapi/35c39ec741db570d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "email-platform-staging-sampleapi",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Component": "api",
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "email-platform-staging-sampleapi",
              "Service": "sampleapi"
            },
            "tags_all": {
              "Component": "api",
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "email-platform-staging-sampleapi",
              "Service": "sampleapi"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                  }
                ],
                "unhealthy_state_routing": [
                  {
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-07dd743f606dbab02"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}